# triangle_matrix

./: Cargo.toml  README.md
src/: def.rs  index.rs  lib.rs  ops.rs
src/lower/: base.rs  mod.rs  simple.rs  symmetric.rs
src/upper/: base.rs  mod.rs  simple.rs  symmetric.rs
